Adding offers, items and about section

--- a/index.html
+++ b/index.html
@@ -16,15 +16,108 @@
     <script src="js/javabra.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,600|Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Quicksand|Open+Sans|Roboto:400,700' rel='stylesheet' type='text/css'>
 	
 </head>
 
 <body>
 
-<header>
-    <h1>Javabra</h1>
-</header>
+<section id="start">
+        <h1 class="header">Javabra<span class="header-sub">Webblösningar</span></h1>
+
+</section>
+<div class="fader">
+
+</div>
+
+<section id="portfolio">
+    <h2 class="references-header">Referenser</h2>
+    <div class="flexbox-container">
+        <div class="items left-item">
+            <img class="item-img" src="media/watch.png">
+
+            <div class="reference-desc">
+                <h2 class="items-header">Lorem ipsum</h2>
+                <h3 class="items-preamble">Lorem ipsum</h3>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </div>
+
+        </div>
+        <div class="items right-item">
+            <img class="item-img" src="media/knife.png">
+            <div class="reference-desc">
+                <h2 class="items-header">Lorem ipsum</h2>
+                <h3 class="items-preamble">Lorem ipsum</h3>
+                Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br><br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </div>
+        </div>
+    </div>
+</section>
+<section class="squares">
+    <div class="square">
+        <div class="inner-content">
+            <div class="table">
+                <div class="table-cell">
+                    SMALL
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="square">
+        <div class="inner-content">
+            <div class="table">
+                <div class="table-cell">
+                    MEDIUM
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="square" >
+        <div class="inner-content">
+            <div class="table">
+                <div class="table-cell">
+                    LARGE
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="square">
+        <div class="inner-content">
+            <div class="table">
+                <div class="table-cell">
+                    XL
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="about">
+    <h2 class="about-header">Om Javabra</h2>
+    <h3 class="about-preamble">Javabra HB startades med en vision om att kunna erbjuda innovativa databaslösningar uppbyggda kring väldesignade webbplatser levererade med trovärdighet, stil och kvalitet.</h3>
+    <div class="about-text">
+    Vi är stolta över de tjänster vi utför och vår logotyp är en garanti för att du som kund alltid ska kunna förvänta dig yttersta klass i alla led – från design och funktionalitet till säkerhet och service.
+    Vi erbjuder något för alla smaker, så om du behöver hjälp med en webbplats, en konceptdesign eller är en smula nyfiken - kontakta oss.
+
+        Hos Javabra arbetar vi oavbrutet mot en förbättrad användarupplevelse – en upplevelse som gör skötseln av webbplatsen både snabb och behändig. För att uppnå detta har vi utvecklat vår Portal - kontroll i ett nötskal. Med vår Portal har du alltid kontroll över och enkel tillgång till alla funktioner på er webbsida.
+
+        Behöver ni sätta ihop ett nyhetsbrev? Några klick och det är redan på väg till era kunder och läsare. Eller, varför inte låta vår Portal skicka ut nyhetsbrev automatiskt, genererade från era artiklar och nyheter? Med vår Portal är allt det möjligt.
+
+        Varför nöja sig med endast bra? Vi har en tro på att saker och ting alltid kan bli bättre. Därför kommer vi alltid att ge er kostnadsfria uppdateringar för att ytterligare berika och utveckla er hemsida.
+    </div>
+</section>
+
+<section id="contact">
+
+</section>
+
+<section id="services">
+    <div class="offers">SMALL</div>
+    <div class="offers">MEDIUM</div>
+    <div class="offers">LARGE</div>
+    <div class="offers">XL</div>
+</section>
+
 
 
 <footer>
