Added navigation, restructure, font changes and changes to services

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="js/javabra.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
     <link href='http://fonts.googleapis.com/css?family=Quicksand|Open+Sans|Roboto:400,700' rel='stylesheet' type='text/css'>
 	
 </head>
@@ -52,89 +54,110 @@
 </section>
 <div class="fader"></div>
 
-<section id="portfolio">
-    <h2 class="references-header">Referenser</h2>
-    <div class="flexbox-container">
-        <div class="items left-item">
-            <img class="item-img" src="media/watch.png">
+<div class="wrapping-container">
 
-            <div class="reference-desc">
-                <h2 class="items-header">Lorem ipsum</h2>
-                <h3 class="items-preamble">Lorem ipsum</h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                <br>
-                <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-            </div>
+    <section id="about">
+        <h2 class="about-header">Om Javabra</h2>
+        <h3 class="about-preamble">Javabra HB startades med en vision om att kunna erbjuda innovativa databaslösningar uppbyggda kring väldesignade webbplatser levererade med trovärdighet, stil och kvalitet.</h3>
+        <div class="about-text">
+            Vi är stolta över de tjänster vi utför och vår logotyp är en garanti för att du som kund alltid ska kunna förvänta dig yttersta klass i alla led – från design och funktionalitet till säkerhet och service. Vi erbjuder något för alla smaker, så om du behöver hjälp med en webbplats, en konceptdesign eller är en smula nyfiken - kontakta oss. Hos Javabra arbetar vi oavbrutet mot en förbättrad användarupplevelse – en upplevelse som gör skötseln av webbplatsen både snabb och behändig. För att uppnå detta har vi utvecklat vår Portal - kontroll i ett nötskal. Med vår Portal har du alltid kontroll över och enkel tillgång till alla funktioner på er webbsida. Behöver ni sätta ihop ett nyhetsbrev? Några klick och det är redan på väg till era kunder och läsare. Eller, varför inte låta vår Portal skicka ut nyhetsbrev automatiskt, genererade från era artiklar och nyheter? Med vår Portal är allt det möjligt. Varför nöja sig med endast bra? Vi har en tro på att saker och ting alltid kan bli bättre. Därför kommer vi alltid att ge er kostnadsfria uppdateringar för att ytterligare berika och utveckla er hemsida.
+        </div>
+    </section>
 
-        </div>
-        <div class="items right-item">
-            <img class="item-img" src="media/knife.png">
-            <div class="reference-desc">
-                <h2 class="items-header">Lorem ipsum</h2>
-                <h3 class="items-preamble">Lorem ipsum</h3> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                <br>
-                <br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-            </div>
-        </div>
-    </div>
-</section>
-<section class="squares">
-    <div class="square">
-        <div class="inner-content">
-            <div class="table">
-                <div class="table-cell">
-                    SMALL
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="square">
-        <div class="inner-content">
-            <div class="table">
-                <div class="table-cell">
-                    MEDIUM
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="square">
-        <div class="inner-content">
-            <div class="table">
-                <div class="table-cell">
-                    LARGE
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="square">
-        <div class="inner-content">
-            <div class="table">
-                <div class="table-cell">
-                    XL
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+    <section id="portfolio">
+        <h2 class="references-header">Våra referenser</h2>
 
-<section id="about">
-    <h2 class="about-header">Om Javabra</h2>
-    <h3 class="about-preamble">Javabra HB startades med en vision om att kunna erbjuda innovativa databaslösningar uppbyggda kring väldesignade webbplatser levererade med trovärdighet, stil och kvalitet.</h3>
-    <div class="about-text">
-        Vi är stolta över de tjänster vi utför och vår logotyp är en garanti för att du som kund alltid ska kunna förvänta dig yttersta klass i alla led – från design och funktionalitet till säkerhet och service. Vi erbjuder något för alla smaker, så om du behöver hjälp med en webbplats, en konceptdesign eller är en smula nyfiken - kontakta oss. Hos Javabra arbetar vi oavbrutet mot en förbättrad användarupplevelse – en upplevelse som gör skötseln av webbplatsen både snabb och behändig. För att uppnå detta har vi utvecklat vår Portal - kontroll i ett nötskal. Med vår Portal har du alltid kontroll över och enkel tillgång till alla funktioner på er webbsida. Behöver ni sätta ihop ett nyhetsbrev? Några klick och det är redan på väg till era kunder och läsare. Eller, varför inte låta vår Portal skicka ut nyhetsbrev automatiskt, genererade från era artiklar och nyheter? Med vår Portal är allt det möjligt. Varför nöja sig med endast bra? Vi har en tro på att saker och ting alltid kan bli bättre. Därför kommer vi alltid att ge er kostnadsfria uppdateringar för att ytterligare berika och utveckla er hemsida.
-    </div>
-</section>
+        <div class="flexbox-container">
+            <div class="items left-item">
+
+                <a href="http://www.goswatches.com/" target="_blank"><img class="item-img" src="media/watch.png"></a>
+
+                <div class="reference-desc">
+
+                    <a href="http://www.goswatches.com/" target="_blank"><h2 class="items-header">Goswatches</h2></a>
+
+                    <h3 class="items-preamble">Lorem ipsum</h3>
+                    <p class="reference-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <br>
+                        <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+                </div>
+
+            </div>
+            <div class="items right-item">
+
+                <a href="http://www.johanknives.com/" target="_blank"><img class="item-img" src="media/knife.png"></a>
+
+                <div class="reference-desc">
+                    <a href="http://www.johanknives.com/" target="_blank"><h2 class="items-header">johanknives</h2></a>
+                    <h3 class="items-preamble">Lorem ipsum</h3>
+
+                    <p class="reference-text">  Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        <br>
+                        <br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="squares">
+        <h2 class="squares-header">Tjänster vi erbjuder</h2>
+        <div class="square">
+            <div class="inner-content">
+                <div class="table">
+                    <div class="table-cell" data-hover="Ett prisvärt och lite enklare paket som likväl håller en utmärkt standard. Här hittar ni de primära funktionerna för er hemsida. " >
+                        <i class="fa fa-info-circle"></i> SMALL
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="square">
+            <div class="inner-content">
+                <div class="table">
+                    <div class="table-cell" data-hover="Ett litet mer tillspetsat paket där ni har ännu större möjligheter. Här finns det mesta av det ni önskar i funktionsväg.">
+                        <i class="fa fa-info-circle"></i> MEDIUM
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="square">
+            <div class="inner-content">
+                <div class="table">
+                    <div class="table-cell" data-hover="Ett val för er som kräver det bästa. Mängder av funktioner och fördelar som uppfyller de tuffa kraven hos en högdynamisk hemsida.">
+                        <i class="fa fa-info-circle"></i> LARGE
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="square">
+            <div class="inner-content">
+                <div class="table">
+                    <div class="table-cell" data-hover="Har ni önskemål som sträcker sig utöver våra ordinarie paket? Kanske en häpnadsväckande idé eller särskilda önskemål?">
+                        <i class="fa fa-info-circle"></i> XL
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+
+
 
 <section id="contact">
 
 </section>
-
+<!--
 <section id="services">
     <div class="offers">SMALL</div>
     <div class="offers">MEDIUM</div>
     <div class="offers">LARGE</div>
     <div class="offers">XL</div>
 </section>
-
+-->
 
 
 <footer>
