--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <ul>
             <li><a href="index.html">Hem</a></li>
             <li><a href="partners.html">Partners</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
-            <li><a href="services.html">Tjänster</a></li>
+            <li><a href="#">LOREM</a></li>
+            <li><a href="#">IPSUM</a></li>
         </ul>
     </div>
 </nav>
@@ -52,6 +52,7 @@
     <h1 class="header">Javabra<span class="header-sub">Webblösningar</span></h1>
 
 </section>
+<div class="arrow-container"><i class="fa fa-arrow-circle-down welcome-arrow fa-5x"></i></div>
 <div class="fader"></div>
 
 <div class="wrapping-container">
@@ -92,7 +93,7 @@
                     <a href="http://www.johanknives.com/" target="_blank"><h2 class="items-header">johanknives</h2></a>
                     <h3 class="items-preamble">Lorem ipsum</h3>
 
-                    <p class="reference-text">  Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    <p class="reference-text"> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                         <br>
                         <br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
@@ -108,8 +109,8 @@
         <div class="square">
             <div class="inner-content">
                 <div class="table">
-                    <div class="table-cell" data-hover="Ett prisvärt och lite enklare paket som likväl håller en utmärkt standard. Här hittar ni de primära funktionerna för er hemsida. " >
-                        <i class="fa fa-info-circle"></i> SMALL
+                    <div class="table-cell square-small" data-hover="Ett prisvärt och lite enklare paket som likväl håller en utmärkt standard. Här hittar ni de primära funktionerna för er hemsida. ">
+                        <i class="fa fa-info-circle"></i><span class="service-type"> SMALL</span>
                     </div>
                 </div>
             </div>
@@ -117,8 +118,8 @@
         <div class="square">
             <div class="inner-content">
                 <div class="table">
-                    <div class="table-cell" data-hover="Ett litet mer tillspetsat paket där ni har ännu större möjligheter. Här finns det mesta av det ni önskar i funktionsväg.">
-                        <i class="fa fa-info-circle"></i> MEDIUM
+                    <div class="table-cell square-medium" data-hover="Ett litet mer tillspetsat paket där ni har ännu större möjligheter. Här finns det mesta av det ni önskar i funktionsväg.">
+                        <i class="fa fa-info-circle"></i><span class="service-type"> MEDIUM</span>
                     </div>
                 </div>
             </div>
@@ -126,8 +127,8 @@
         <div class="square">
             <div class="inner-content">
                 <div class="table">
-                    <div class="table-cell" data-hover="Ett val för er som kräver det bästa. Mängder av funktioner och fördelar som uppfyller de tuffa kraven hos en högdynamisk hemsida.">
-                        <i class="fa fa-info-circle"></i> LARGE
+                    <div class="table-cell square-large" data-hover="Ett val för er som kräver det bästa. Mängder av funktioner och fördelar som uppfyller de tuffa kraven hos en högdynamisk hemsida.">
+                        <i class="fa fa-info-circle"></i><span class="service-type"> LARGE</span>
                     </div>
                 </div>
             </div>
@@ -135,8 +136,8 @@
         <div class="square">
             <div class="inner-content">
                 <div class="table">
-                    <div class="table-cell" data-hover="Har ni önskemål som sträcker sig utöver våra ordinarie paket? Kanske en häpnadsväckande idé eller särskilda önskemål?">
-                        <i class="fa fa-info-circle"></i> XL
+                    <div class="table-cell square-xl" data-hover="Har ni önskemål som sträcker sig utöver våra ordinarie paket? Kanske en häpnadsväckande idé eller särskilda önskemål?">
+                        <i class="fa fa-info-circle"></i><span class="service-type"> XL</span>
                     </div>
                 </div>
             </div>
@@ -144,24 +145,8 @@
     </section>
 </div>
 
-
-
-
-<section id="contact">
-
-</section>
-<!--
-<section id="services">
-    <div class="offers">SMALL</div>
-    <div class="offers">MEDIUM</div>
-    <div class="offers">LARGE</div>
-    <div class="offers">XL</div>
-</section>
--->
-
-
 <footer>
-   
+
 </footer>
 
 </body>
