--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta charset="utf-8">
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -71,7 +69,7 @@
         <div class="flexbox-container">
             <div class="items left-item">
 
-                <a href="http://www.goswatches.com/" target="_blank"><img class="item-img" src="media/watch.png"></a>
+                <a href="http://www.goswatches.com/" target="_blank"><img class="item-img" src="media/watch.png" alt="watch"></a>
 
                 <div class="reference-desc">
 
@@ -87,7 +85,7 @@
             </div>
             <div class="items right-item">
 
-                <a href="http://www.johanknives.com/" target="_blank"><img class="item-img" src="media/knife.png"></a>
+                <a href="http://www.johanknives.com/" target="_blank"><img class="item-img" src="media/knife.png" alt="knife"></a>
 
                 <div class="reference-desc">
                     <a href="http://www.johanknives.com/" target="_blank"><h2 class="items-header">johanknives</h2></a>
@@ -105,7 +103,7 @@
 
 
     <section class="squares">
-        <h2 class="squares-header">Tjänster vi erbjuder</h2>
+        <h2 class="squares-header">Paket vi erbjuder</h2>
         <div class="square">
             <div class="inner-content">
                 <div class="table">
@@ -144,10 +142,6 @@
         </div>
     </section>
 </div>
-
-<footer>
-
-</footer>
 
 </body>
 
